--- a/templates/single_game_block.html
+++ b/templates/single_game_block.html
@@ -8,6 +8,9 @@ Game #{{game.pk}}
   {% else %}
     <font color='red'>
   {% endif %}
-  {{ data.client.name }} - {{ data.version }}
-  </font><br>
+  {{ data.client.name }} - {{ data.version }}</font> 
+  {% if data.output_url %}
+    <a href="{{ data.output_url }}">Output</a>
+  {% endif %}
+  <br>
 {% endfor %}
