Added the bootstrap

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
 <a href="{% url 'django.contrib.auth.views.logout' %}">logout</a>
 </div> 
 <div class="content">
+<a href='/'>Main</a>
+<a href='/inject'>Inject</a>
+<a href='/health'>Health</a>    
+    
 {% block content %}
 If you can see this, then the django template author forgot to put block
 delimiters around the content block. Go laugh at him.
