--- a/templates/health.html
+++ b/templates/health.html
@@ -13,8 +13,8 @@ Game requests in the queue: {{ ready_requests }}<br>
 Game requests reserved: {{ running_requests }}<br>
 
 <h2>Database's View</h2>
-New Games: {{ new_games }}</br>
 Scheduled Games: {{ scheduled_games }}</br>
+Building Games: {{ building_games }}</br>
 Running Games: {{ running_games }}</br>
 Complete Games: {{ complete_games }}</br>
 Failed Games: {{ failed_games }}<br>
