--- a/website/templates/inject.html
+++ b/website/templates/inject.html
@@ -5,7 +5,7 @@ Manually Inject a Game
 {% endblock %}
 
 {% block content %}
-<form method='POST' action='inject'>
+<form method='POST' action='{% url thunderdome.views.inject %}'>
   {% csrf_token %}
   {{ form.as_p }}
   <input type='submit' value='Submit' />
