Catching github up with months of changes on the head node
-matt

--- a/website/templates/scoreboard.html
+++ b/website/templates/scoreboard.html
@@ -6,8 +6,8 @@ Scoreboard
 
 {% block head %}
 <script type="text/javascript">
-$.getScript('chart/scoreboard');
-$.getScript('chart/throughput');
+$.getScript('/static/scoreboard.js');
+//$.getScript('chart/throughput');
 </script>
 {% endblock %}
 
