--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -4,9 +4,12 @@
 
 <html>
 <head>
-<title>{% block title %}Page title{% endlblock %}</title>
+<title>{% block title %}Page title{% endblock %}</title>
 <script src='http://code.jquery.com/jquery-1.7.1.min.js' type='text/javascript'></script>
-
+<script src='https://www.google.com/jsapi' type='text/javascript'></script>
+<script type='text/javascript'>
+  google.load("visualization", "1", {packages:["corechart", "table"]});
+</script>
 {% block head %}
 
 {% endblock %}
@@ -16,9 +19,9 @@
 <div class="logout_button" style="text-align:right">
 </div>
 <div class="content">
-<a href='main'>Main</a>
-<a href='inject'>Inject</a>
-<a href='health'>Health</a>
+<a href='#'>Main</a>
+<a href='#'>Inject</a>
+<a href='#'>Health</a>
 
 {% block content %}
 If you can see this, then the djano template author forgot to put block
