added health page view, template information

--- a/arena/thunderdome/templates/thunderdome/health.html
+++ b/arena/thunderdome/templates/thunderdome/health.html
@@ -20,6 +20,8 @@ Complete Games: {{ complete_games }}</br>
 Failed Games: {{ failed_games }}<br>
 Last Game Completed: {{ last }}<br>
 
+Sanity: {{ sanity }} </br>
+
 <h2>Match Statuses</h2>
 
 <h2>Node Throughput</h2>
