updated README.md and buildout.cfg to include beanstalkd, and added links to other pages in base.html

--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -20,8 +20,8 @@
 </div>
 <div class="content">
 <a href='#'>Main</a>
-<a href='#'>Inject</a>
-<a href='#'>Health</a>
+<a href='inject'>Inject</a>
+<a href='health'>Health</a>
 
 {% block content %}
 If you can see this, then the djano template author forgot to put block
