--- a/arena/thunderdome/templates/thunderdome/clients.html
+++ b/arena/thunderdome/templates/thunderdome/clients.html
@@ -12,3 +12,4 @@ ACM SIG-Game MegaMiner Arena (Thunderdome) Clients
   {{ client.name }} - {{ client.current_version}} - {{ client.rating }}
 {% endfor %}
 
+{% endblock %}
