clients.html rearranging

--- a/arena/thunderdome/templates/thunderdome/clients.html
+++ b/arena/thunderdome/templates/thunderdome/clients.html
@@ -9,7 +9,7 @@ ACM SIG-Game MegaMiner Arena (Thunderdome) Clients
 <h1>Clients</h1>
 
 {% for client in clients %}
-  {{ client.name }} - {{ client.current_version}} - {{ client.rating }}
+  {{ client.rating }} - {{ client.current_version}} - {{ client.name }}
   </br>
 {% endfor %}
 
