added stuff for human swiss scheduling

--- a/arena/thunderdome/templates/thunderdome/human_swiss.html
+++ b/arena/thunderdome/templates/thunderdome/human_swiss.html
@@ -17,7 +17,10 @@ Wakka Wakka play more games!
 {% for client in clients %}
 
 <tr>
-  <td>{{client[0].name}}</td>
+  <td>{{ client.0.name }}</td>
+  <td>{{ client.1.game_ready }}</td>
+  <td>{{ client.1.game_number }}</td>
+  <td>{{ client.1.game_location }}</td>
 </tr>
 
 {% endfor %}
