more human stuff

--- a/arena/thunderdome/templates/thunderdome/human_swiss.html
+++ b/arena/thunderdome/templates/thunderdome/human_swiss.html
@@ -12,6 +12,7 @@ Wakka Wakka play more games!
   <th>Game Ready?</th>
   <th>Game Number</th>
   <th>Location</th>
+  <th>Port</th>
 </tr>
 
 {% for client in clients %}
@@ -21,6 +22,7 @@ Wakka Wakka play more games!
   <td>{{ client.1.game_ready }}</td>
   <td>{{ client.1.game_number }}</td>
   <td>{{ client.1.game_location }}</td>
+  <td>{{ client.1.game_port }}</td>
 </tr>
 
 {% endfor %}
