--- a/arena/thunderdome/templates/thunderdome/settings.html
+++ b/arena/thunderdome/templates/thunderdome/settings.html
@@ -1,13 +1,19 @@
 {% extends "thunderdome/base.html" %}
-{% load url from future %}
 
 {% block title %}
 Settings
 {% endblock %}
 
 {% block content %}
-<h1> Available settings </h1>
+<h1> Select a config </h1>
 
+<form method='POST' action='{% url thunderdome.views.settings %}'>
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type='submit' value='Select' />
+</form>
+
+<h1> Available settings </h1>
 {% for setting in arena_settings %}
   {{ setting.active }}
   {{ setting.game_name }}
