added arena config setting of configs.py added fixtures instead of old setting of db

--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -19,9 +19,10 @@
 <div class="logout_button" style="text-align:right">
 </div>
 <div class="content">
-<a href='#'>Main</a>
+<a href="{% url 'thunderdome.views.scoreboard' %}">Main</a>
 <a href='inject'>Inject</a>
 <a href='health'>Health</a>
+<a href='settings'>Settings</a>
 
 {% block content %}
 If you can see this, then the djano template author forgot to put block
