Added Clients link

--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -23,6 +23,7 @@
 <a href='inject'>Inject</a>
 <a href='health'>Health</a>
 <a href='settings'>Settings</a>
+<a href='clients'>clients</a>
 
 {% block content %}
 If you can see this, then the djano template author forgot to put block
