Added human stuff

--- a/arena/thunderdome/templates/thunderdome/health.html
+++ b/arena/thunderdome/templates/thunderdome/health.html
@@ -37,7 +37,7 @@ Sanity: {{ sanity }} </br>
   <th>Games Completed</th>
   <th>Games per Hour</th>
   <th>Current Game</th>
-  <th>Match Status</th>
+  <th>Game Status</th>
   <th>Last Update</th>
 </tr>
 {% for ref in refs %}
