--- a/arena/thunderdome/templates/thunderdome/scores.html
+++ b/arena/thunderdome/templates/thunderdome/scores.html
@@ -16,34 +16,12 @@ table, th, td {
 
 <h1>Rankings</h1>
 
-<table border="1" style="width:50%">
-<tr><td><b>Rank</b></td><td><b>Client Name</b></td><td><b>Score</b></td></tr>
+<table border="1" style="width:100%">
+<tr><td><b>Rank</b></td><td><b>Client Name</b></td><td><b>Score</b></td><td><b>Sum of Opponents' Scores</b></td><td><b>Sum of Opponents' Ratings</b></td><td><b>Number of Times Played as Black</b></td></tr>
 {% for client in clients %}
-  <tr><td>{{ forloop.counter }}</td><td>{{ client.name }}</td><td>{{ client.score }}</td></tr>
+  <tr><td>{{ forloop.counter }}</td><td>{{ client.name }}</td><td>{{ client.score }}</td><td>{{ client.buchholz }}</td><<td>{{ client.sumrate }}</td><<td>{{ client.num_black }}</td><</tr>
 {% endfor %}
 </table>
-
-<!--
-<div style="float:left">
-<table border="1" style="width:45%">
-{% for client in clients %}
-   {% if forloop.counter < clients|length %}
-       <tr><td>{{ forloop.counter }}</td><td>{{ client.name }}</td><td>{{ client.score }}</td></tr>
-   {% endif %}
-{% endfor %}
-</table>
-</div>
-
-<div style="float:right">
-<table border="1" style="width:45%">
-{% for client in clients %}
-    {% if forloop.counter >= clients|length %}
-        <tr><td>{{ forloop.counter }}</td><td>{{ client.name }}</td><td>{{ client.score }}</td></tr>
-    {% endif %}
-{% endfor %}
-</table>
-</div>
--->
 <head>
 <meta http-equiv="refresh" content="5">
 </head>
