Made 500 error page better

--- a/arena/templates/500.html
+++ b/arena/templates/500.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-<p> wakka wakka 500 page</p>
+<h1> wakka wakka 500 page</h1>
+<img src="http://www.computerhope.com/jargon/p/pacman.jpg">
 </body>
 </html>
