--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -24,6 +24,7 @@
 <a href='health'>Health</a>
 <a href='settings'>Settings</a>
 <a href='clients'>Clients</a>
+<a href='scores'>Chess Rankings</a>
 
 {% block content %}
 If you can see this, then the djano template author forgot to put block
