--- a/arena/thunderdome/templates/thunderdome/scores.html
+++ b/arena/thunderdome/templates/thunderdome/scores.html
@@ -16,7 +16,7 @@ table, th, td {
 
 <h1>Rankings</h1>
 
-<table border="2" style="width:100%">
+<table id="clients_table" border="2" style="width:100%">
 <font color="white"><tr><td></font><b>Rank</b></td><td><b>Client Name</b></td><td><b>Score</b></td><td><b>Sum of Opponents' Scores</b></td><td><b>Sum of Opponents' Ratings</b></td><td><b>Number of Times Played as Black</b></td></tr>
 
 {% for client in clients %}
