Spell check, added some kool colors

--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -26,7 +26,7 @@
 <a href='logout'>Logout</a>
 
 {% block content %}
-If you can see this, then the djano template author forgot to put block
+If you can see this, then the django template author forgot to put block
 delimiters around the content block. Go laugh at him.
 {% endblock %}
 
