scoreboard issues fixed

--- a/arena/thunderdome/templates/thunderdome/scoreboard.html
+++ b/arena/thunderdome/templates/thunderdome/scoreboard.html
@@ -24,7 +24,7 @@ Scoreboard
         <th>Score</th>
         <th>Sum of Opponents' Scores</th>
         <th>Sum of Opponents' Ratings</th>
-        <th>Number of Times Plyaed as Black</th>
+        <th>Number of Times Played as Black</th>
       </tr>
     </thead>
   </table>
