--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -18,12 +18,12 @@
 <body>
 <div class="content">
 <a href="{% url 'thunderdome.views.scoreboard' %}">Main</a>
-<a href='inject'>Inject</a>
-<a href='health'>Health</a>
-<a href='settings'>Settings</a>
-<a href='clients'>Clients</a>
-<a href='scores'>Chess Rankings</a>
-<a href='logout'>Logout</a>
+<a href="{% url 'thunderdome.views.inject' %}">Inject</a>
+<a href="{% url 'thunderdome.views.health' %}">Health</a>
+<a href="{% url 'thunderdome.views.settings' %}">Settings</a>
+<a href="{% url 'thunderdome.views.display_clients' %}">Clients</a>
+<a href="{% url 'thunderdome.views.searchgames' %}">Search Games</a>
+<a href="{% url 'thunderdome.views.logout_view' %}">Logout</a>
 
 {% block content %}
 If you can see this, then the django template author forgot to put block
