--- a/arena/thunderdome/templates/thunderdome/scoreboard.html
+++ b/arena/thunderdome/templates/thunderdome/scoreboard.html
@@ -11,6 +11,7 @@ Scoreboard
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
 <link rel="stylesheet" href="{% static 'css/datatables.min.css' %}" type="text/css">
 <link rel="styleshee" href="{% static 'css/dataTables.bootstrap.min.css' %}" type="text/css">
+<link rel="styleshee" href="{% static 'css/scroller.dataTables.min.css' %}" type="text/css">
 {% endblock %}
 
 {% block content %}
@@ -34,5 +35,6 @@ Scoreboard
 {% block scripts %}
 <script src="{% static 'js/jquery.dataTables.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/dataTables.bootstrap.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/dataTables.scroller.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/scoreboard.js' %}" type="text/javascript"></script>
 {% endblock %}
