Optimized games list view

--- a/arena/thunderdome/templates/thunderdome/howtodev.html
+++ b/arena/thunderdome/templates/thunderdome/howtodev.html
@@ -8,7 +8,7 @@ ACM SIG-Game MegaMiner Arena (Thunderdome)
 {% block content %}
 <h1>How to test your client in the Developer Arena</h1>
 
-1. Message @danielbolef with a git repo and optional client name <br>
+1. Message @danielbolef on Slack with a git repo and optional client name <br>
 2. Go to http://r99acm.device.mst.edu:10000/mies/thunderdome/searchgames (or click Search Games if you're already in the arena api)<br>
 3. Select your client <br>
 4. Get a list of games your client has played in <br>
