Sped up loading time of health page Did this by removing some usless info as well as moving some of the computing to the archiver.

--- a/arena/thunderdome/templates/thunderdome/health.html
+++ b/arena/thunderdome/templates/thunderdome/health.html
@@ -46,7 +46,7 @@ Sanity: {% if sanity %}<font color="green">True</font>{% else %}<font color="red
 <tr>
   <td>{{ref.blaster_id}}/{{ref.referee_id}}</td>
   <td>{{ref.started}}</td>
-  <td>{{ref.games_completed}}</td>
+  <td>{{ref.games_done}}</td>
   <td>{{ref.compute_rate}}</td>
   <td>{{ref.last_match}}</td>
   <td>{{ref.last_match.status}}</td>
