Now always use master

--- a/arena/thunderdome/templates/thunderdome/howtodev.html
+++ b/arena/thunderdome/templates/thunderdome/howtodev.html
@@ -17,7 +17,7 @@ ACM SIG-Game MegaMiner Arena (Thunderdome)
 <h2>Extra stuff</h2>
 
 1. If you're getting a server error that's been fixed, it's probably because the server updates need to be pulled into the dev arena.  Go yell @danielbolef to fix this. <br>
-2. Your client will NOT update automatically when you push changes, you will need to send your git repo to @danielbolef again. <br>
+2. The arena will always run your master branch <br>
 3. If you're impatient and want to play against another player NOW, you can go to the Inject link and create a game yourself instead of waiting for the scheduler.
 
 {% endblock %}
