--- a/arena/thunderdome/templates/thunderdome/mmai_scoreboard.html
+++ b/arena/thunderdome/templates/thunderdome/mmai_scoreboard.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block title %}
-Scoreboard
+MMAI Scoreboard
 {% endblock %}
 
 {% block head %}
@@ -23,10 +23,7 @@ Scoreboard
       <tr>
         <th>Rank</th>
         <th>Client Name</th>
-        <th>Score</th>
-        <th>Sum of Opponents' Scores</th>
-        <th>Sum of Opponents' Ratings</th>
-        <th>Number of Times Played as Black</th>
+        <th>Rating</th>
       </tr>
     </thead>
   </table>
@@ -37,5 +34,5 @@ Scoreboard
 <script src="{% static 'js/jquery.dataTables.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/dataTables.bootstrap.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/dataTables.scroller.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/scoreboard.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/mmai_scoreboard.js' %}" type="text/javascript"></script>
 {% endblock %}
