working sort icons for clients

--- a/arena/thunderdome/templates/thunderdome/clients.html
+++ b/arena/thunderdome/templates/thunderdome/clients.html
@@ -10,6 +10,7 @@ ACM SIG-Game MegaMiner Arena (Thunderdome) Clients
 <link rel="stylesheet" href="{% static 'css/datatables.min.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'css/hiddenscrollbar.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static 'css/hiddenSortIcon.css' %}" type="text/css">
 {% endblock %}
 
 {% block content %}
