table is full screen width with rating

--- a/arena/thunderdome/static/css/client.css
+++ b/arena/thunderdome/static/css/client.css
@@ -15,3 +15,7 @@ table.dataTable thead .sorting_asc:after {
 table.dataTable thead .sorting_desc:after {
     content: "\2193";
 }
+
+.row {
+    max-width: none;
+}
