modifying data displayed

--- a/arena/thunderdome/templates/thunderdome/clients.html
+++ b/arena/thunderdome/templates/thunderdome/clients.html
@@ -25,6 +25,7 @@ ACM SIG-Game MegaMiner Arena (Thunderdome) Clients
         <th>Embargoed?</th>
         <th>Embargo Reason</th>
         <th>Missing?</th>
+        <th>Eligible?</th>
         <th>Last Game Played</th>
         <th>Current Version</th>
         <th>Language</th>
