Added a directory for the scoreboards

--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -17,7 +17,7 @@
 
 <body>
 <div class="content">
-<a href="{% url 'thunderdome.views.scoreboard' %}">Scoreboard</a>
+<a href="{% url 'thunderdome.views.scoreboards' %}">Scoreboards</a>
 <a href="{% url 'thunderdome.views.inject' %}">Inject</a>
 <a href="{% url 'thunderdome.views.health' %}">Health</a>
 <a href="{% url 'thunderdome.views.settings' %}">Settings</a>
