--- a/arena/thunderdome/templates/thunderdome/scoreboard.html
+++ b/arena/thunderdome/templates/thunderdome/scoreboard.html
@@ -16,7 +16,7 @@ Scoreboard
 {% endblock %}
 
 {% block content %}
-<h1>Scoreboard</h1>
+<h1>Chess Scoreboard</h1>
 <div id="scoreboard-container">
   <table id="scoreboard" class="stripe cell-border" cellspacing="0" width="100%">
     <thead>
