--- a/arena/thunderdome/templates/thunderdome/mmai_scoreboard.html
+++ b/arena/thunderdome/templates/thunderdome/mmai_scoreboard.html
@@ -15,7 +15,7 @@ MMAI Scoreboard
 {% endblock %}
 
 {% block content %}
-<h1>Scoreboard</h1>
+<h1>Rankings Scoreboard</h1>
 <div id="scoreboard-container">
   <table id="scoreboard" class="stripe cell-border" cellspacing="0" width="100%">
     <thead>
