--- a/arena/thunderdome/templates/thunderdome/scoreboard.html
+++ b/arena/thunderdome/templates/thunderdome/scoreboard.html
@@ -1,3 +1,4 @@
+
 {% extends "thunderdome/base.html" %}
 
 {% load staticfiles %}
@@ -27,6 +28,7 @@ Scoreboard
         <th>Sum of Opponents' Scores</th>
         <th>Sum of Opponents' Ratings</th>
         <th>Number of Times Played as Black</th>
+	<th>Language</th>
       </tr>
     </thead>
   </table>
