--- a/arena/thunderdome/templates/thunderdome/settings.html
+++ b/arena/thunderdome/templates/thunderdome/settings.html
@@ -34,6 +34,7 @@ Settings
   {{ setting.beanstalk_host }}
   {{ setting.client_prefix }}
   {{ setting.req_queue_length }}
+  {{ setting.persistent }}
   <br>
 {% endfor %}
 
