Game statistics. Closes #157

--- a/arena/thunderdome/templates/thunderdome/scoreboards.html
+++ b/arena/thunderdome/templates/thunderdome/scoreboards.html
@@ -9,6 +9,9 @@ ACM SIG-Game MegaMiner Arena (Thunderdome)
 <h1><a href="{% url 'thunderdome.views.mmai_scoreboard' %}">Rankings Scoreboard</a></h1>
 <p>This scoreboard shows the overall rankings in the arena.</p>
 
+<h1><a href="{% url 'thunderdome.views.gamestatistics' %}">Client Statistics</a></h1>
+<p>This page shows statistics for every client vs. every other client. It also allows you view a single client vs. all others in a more detailed view</p>
+
 <h1><a href="{% url 'thunderdome.views.scoreboard' %}">Chess Scoreboard</a></h1>
 <p>This scoreboard shows the rankings during the chess tournament. This scoreboard is only valid during a chess tournament.</p>
 
