Fixes for game statistics

--- a/arena/thunderdome/templates/thunderdome/winpredictions.html
+++ b/arena/thunderdome/templates/thunderdome/winpredictions.html
@@ -39,4 +39,8 @@ View Statistics for a Client
   <tr><td></td><td bgcolor="#5656ff" align="center" colspan="{{ clients|length }}"><b><font style=color:#15ff00>100-95%</font><font style=color:#7fff00>  95-90%</font><font style=color:#bfff00>  90-75%</font><font style=color:#fff200>  75-50%</font><font style=color:#ff9000>  50-25%</font><font style=color:#ff0000>  25-0%</font></b></td></tr>
 </table>
 
+<head>
+<meta http-equiv="refresh" content="60">
+</head>
+
 {% endblock %}
