Changes made in prep for MMAI20

--- a/arena/thunderdome/templates/thunderdome/base.html
+++ b/arena/thunderdome/templates/thunderdome/base.html
@@ -18,7 +18,8 @@
 <body>
 <div class="content">
 <a href="{% url 'thunderdome.views.scoreboards' %}">Statistics</a>
-<a href="{% url 'thunderdome.views.inject' %}">Inject</a>
+<a href="{% url 'thunderdome.views.inject_com' %}">Inject</a>
+<a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Admin pages:</a>
 <a href="{% url 'thunderdome.views.health' %}">Health</a>
 <a href="{% url 'thunderdome.views.settings' %}">Settings</a>
 <a href="{% url 'thunderdome.views.display_clients' %}">Clients</a>
